[gd_scene load_steps=13 format=3 uid="uid://b4feee6p7u23t"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_okgou"]
[ext_resource type="Texture2D" uid="uid://b2kg2f3g0isx6" path="res://player/res/spaceship1.png" id="2_tq6ni"]
[ext_resource type="Script" path="res://game/BehaviorHovering.gd" id="3_3sh8d"]
[ext_resource type="Texture2D" uid="uid://dxq1hgv2jrdq1" path="res://player/res/red-thruster-effect-clipart-md.png" id="4_q52qo"]
[ext_resource type="Texture2D" uid="uid://chq5aw0dmtou1" path="res://player/res/blue-thruster-effect-clipart-md.png" id="5_otbre"]
[ext_resource type="AudioStream" uid="uid://bqclchid7ycv5" path="res://player/res/epstein_drive.mp3" id="6_iug6o"]
[ext_resource type="Texture2D" uid="uid://ewdhlih5tkei" path="res://player/res/forecefield.png" id="7_v5aau"]
[ext_resource type="AudioStream" uid="uid://knpawwsupgt" path="res://player/res/shield-activate.mp3" id="8_8yj2h"]
[ext_resource type="AudioStream" uid="uid://cy1hkeffpbebj" path="res://player/res/shield-contact.mp3" id="9_no4tc"]
[ext_resource type="AudioStream" uid="uid://bhmpcs2yghyuf" path="res://player/res/shield-deactivate.mp3" id="9_xkfbu"]

[sub_resource type="GDScript" id="GDScript_83fug"]
script/source = "class_name ShieldArea
extends Area2D

signal shield_changed(value: float)

const speed_charge = 10
const speed_discharge = -30

var velocity = Vector2(-50, 0)
var growth = -1;
var shield = 0

func _ready():
	area_entered.connect(on_asteroid_collision)

func _process(delta):
	if visible:
		# shield active
		$ShieldBody.scale.y += growth * delta
		$ShieldBody.scale.x += growth * delta;
		if $ShieldBody.scale.x < 0.92:
			growth *= -1
		elif $ShieldBody.scale.x > 1.0:
			growth *= -1
		if shield > 0.0:
			shield += speed_discharge * delta
		else:
			shield = 0.0
			$ShieldDeactivate.play(0.1)
			visible = false;
	else:
		# shield inactive
		if shield < 100.0:
			shield += speed_charge * delta
			
			if shield >= 100.0:
				$ShieldRecharged.play(0.1)
		else:
			shield = 100.0
		
	shield_changed.emit(shield)


func on_asteroid_collision(area : Area2D):
	if area is EnemyRoot:
		var asteroid : EnemyRoot = area
		if (shield == 100.0):
			$ShieldActivate.play(0.1)
			visible = true
		if (visible):
			$ShieldContact.play(0.1)
			var player = get_parent()
			asteroid.velocity.x = player.current_speed.x
			asteroid.velocity.y = player.current_speed.y
			player.current_speed.x = -player.current_speed.x / 2
			player.current_speed.y = -player.current_speed.y / 2
			get_viewport().set_input_as_handled()
		

"

[sub_resource type="CircleShape2D" id="CircleShape2D_3yima"]
radius = 95.4521

[node name="Player" type="CharacterBody2D"]
z_index = 1
position = Vector2(-2.27374e-13, -1)
rotation = 1.5708
scale = Vector2(0.45, 0.45)
script = ExtResource("1_okgou")

[node name="Muzzle" type="Marker2D" parent="."]
position = Vector2(5, -65.714)

[node name="ShipBody" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_tq6ni")

[node name="BehaviorHovering" type="Node" parent="."]
script = ExtResource("3_3sh8d")

[node name="thrust_back_left" type="Sprite2D" parent="."]
position = Vector2(-26.6664, 68.889)
rotation = 4.71239
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_q52qo")

[node name="thrust_back_right" type="Sprite2D" parent="."]
position = Vector2(28.8892, 68.8888)
rotation = 4.71239
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_q52qo")

[node name="thrust_front_left" type="Sprite2D" parent="."]
position = Vector2(-26.6667, -26.6671)
rotation = 1.5708
scale = Vector2(0.025, 0.025)
texture = ExtResource("5_otbre")

[node name="thrust_front_right" type="Sprite2D" parent="."]
position = Vector2(31.1111, -26.6667)
rotation = 1.5708
scale = Vector2(0.025, 0.025)
texture = ExtResource("5_otbre")

[node name="thrust_left" type="Sprite2D" parent="."]
position = Vector2(-68.8887, 8.88916)
scale = Vector2(0.025, 0.025)
texture = ExtResource("5_otbre")

[node name="thrust_right" type="Sprite2D" parent="."]
position = Vector2(68.8889, 8.88867)
rotation = 3.14159
scale = Vector2(0.025, 0.025)
texture = ExtResource("5_otbre")

[node name="ThrusterSoundBack" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 65)
stream = ExtResource("6_iug6o")
volume_db = -10.0

[node name="ThrusterSoundFront" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -65)
stream = ExtResource("6_iug6o")
volume_db = -10.0
pitch_scale = 1.15

[node name="ThrusterSoundLeft" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-100, 0)
stream = ExtResource("6_iug6o")
volume_db = -10.0
pitch_scale = 1.2

[node name="ThrusterSoundRight" type="AudioStreamPlayer2D" parent="."]
position = Vector2(100, 0)
stream = ExtResource("6_iug6o")
volume_db = -10.0
pitch_scale = 1.25

[node name="ShipBodyCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-48.8888, 37.778, -28.8885, 95.5557, 2.22246, 64.4444, 28.8892, 95.5555, 44.4446, 55.5554, 44.4445, 28.8887, 77.7778, 8.88861, 44.4444, -8.88905, 31.111, -40.0001, 22.2221, -26.6667, 2.22196, -73.3333, -20.0001, -33.3333, -31.1112, -35.5554, -44.4445, -11.111, -82.2222, 8.88919)

[node name="ShieldArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 10)
script = SubResource("GDScript_83fug")

[node name="ShieldBody" type="Sprite2D" parent="ShieldArea"]
self_modulate = Color(1, 1, 1, 0.443137)
texture = ExtResource("7_v5aau")

[node name="ShieldBodyCollision" type="CollisionShape2D" parent="ShieldArea"]
position = Vector2(4.00543e-05, 1.11111)
shape = SubResource("CircleShape2D_3yima")

[node name="ShieldActivate" type="AudioStreamPlayer" parent="ShieldArea"]
stream = ExtResource("8_8yj2h")
volume_db = -10.0

[node name="ShieldContact" type="AudioStreamPlayer" parent="ShieldArea"]
stream = ExtResource("9_no4tc")

[node name="ShieldDeactivate" type="AudioStreamPlayer" parent="ShieldArea"]
stream = ExtResource("9_xkfbu")
volume_db = -10.0

[node name="ShieldRecharged" type="AudioStreamPlayer" parent="ShieldArea"]
stream = ExtResource("9_no4tc")
pitch_scale = 1.5

[connection signal="shield_changed" from="ShieldArea" to="." method="_on_shield_area_shield_changed"]
